# Rotation-Aware-OTP-Prediction-Capacity-Scenario-Engine

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: retrain_pipeline.yml
data/scripts/: generate_synthetic_data.py
docs/: methodology.md  trade_off_analysis.md
notebooks/: 01_eda.ipynb  02_model_development.ipynb  03_scenario_analysis.ipynb
src/: __init__.py
src/dashboard/: app.py  llm_query.py  powerbi_export.py
src/integrations/: weather_api.py
src/mlops/: tracking.py
src/models/: demand_forecaster.py  otp_predictor.py  scenario_simulator.py
src/pipeline/: etl.py  features.py
src/sql/: create_tables.sql
src/sql/queries/: capacity_utilization.sql  otp_trend.sql  top_delay_routes.sql  weather_impact.sql
tests/: test_etl.py  test_models.py
