[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "spirit-otp-engine"
version = "1.0.0"
description = "Spirit Airlines FLL Hub: OTP Prediction & Demand-Capacity Scenario Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Data Analytics Team" }]
keywords = ["airlines", "otp", "machine-learning", "scenario-simulation", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "polars>=0.19.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "scipy>=1.11.0",
    "statsmodels>=0.14.0",
    "streamlit>=1.28.0",
    "openai>=1.0.0",
    "duckdb>=0.9.0",
    "plotly>=5.17.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pyarrow>=13.0.0",
    "shap>=0.43.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "nbformat>=5.9.0",
    "ipykernel>=6.25.0",
]

[project.scripts]
spirit-otp = "main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
